fix sign up issue on mobile

--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -63,3 +63,8 @@ h5  {
     color: #6494ED;
   }
 }
+
+a.cancel-auth {
+  float: right;
+  color: grey;
+}
