--- a/src/app/auth/signin/signin.component.scss
+++ b/src/app/auth/signin/signin.component.scss
@@ -19,3 +19,8 @@ button.action-response-primary  {
     color: #6494ED;
   }
 }
+
+a.cancel-auth {
+  float: right;
+  color: grey;
+}
